# transcend-sdk

./: Cargo.toml  README.md
.github/workflows/: rust-ci.yml
examples/: common.rs  create_workspace.rs  datasets.rs  get_datasets.rs  list_workspaces.rs  metadata.rs  programs.rs  read_dataset.rs  upload_dataset.rs  upload_program.rs  workspace.rs
examples/common/: mod.rs
src/: arrow.rs  client.rs  datasets.rs  error.rs  lib.rs  metadata.rs  programs.rs  runs.rs  upload.rs  workspaces.rs
src/datasets/: list.rs  read.rs  upload.rs
src/programs/: upload.rs
src/runs/: run.rs  status.rs
