[package]
name = "transcend-sdk"
version = "0.1.0"
edition = "2024"
description = "Transcend SDK"
readme = "README.md"
license = "AGPL-3.0-or-later"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
thiserror = "2"
arrow-array = "56"
arrow-ipc = "56"
arrow-schema = "56"
autark-frontend = { version = "0.1.0", path = "../autark/crates/autark-frontend" }
